Fixed Index Page filter buttons and dropboxes alignment.

--- a/src/CompetitionPlatform/wwwroot/css/site.css
+++ b/src/CompetitionPlatform/wwwroot/css/site.css
@@ -100,6 +100,8 @@ textarea {
 }
 
 .project-filter {
+    margin-top: 25px;
+    margin-bottom: 20px;
     margin-right: 10px;
 }
 
